<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">UCatch</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <!-- 下拉刷新的配置 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- 页面的string命名 -->
    <string name="ucatch">拾取</string>
    <string name="leave_msg">留言</string>

    <!-- 拾取界面的 -->
    <string name="location">珠海国际赛车场</string>
    <!-- 设置界面 -->
    <string name="settings_push_message_text">消息推送</string>
    <string name="settings_voice_reminder_text">声音提醒</string>
    <string name="settings_shake_reminder_text">震动提醒</string>
    <string name="settings_anti_interference_pattern_text">防打扰模式</string>
    <string name="settings_start_time_text">开始时间</string>
    <string name="settings_end_time_text">结束时间</string>
    <string name="settings_about_text">关于</string>
    <string name="settings_disclaimer_text">免责声明</string>
    <string name="settings_check_for_updates_text">检查更新</string>
    <string name="settings_check_for_updates_show">版本号</string>
    <!-- 通用图片描述 -->
    <string name="common_imageview_contentDescription">图片显示中……</string>
    <!-- 评论内容默认的显示 -->
    <string name="comment_text_default">默认的图片评论描述。。。</string>
    <!-- 注册界面 -->
    <string name="register_phone_hint">请输入您的手机号</string>
    <string name="register_password_hint">请输入8-16位密码</string>
    <string name="register_signagreement_hint">已阅读并同意</string>
    <string name="register_agreement_and_privacy">服务许可与隐私协议</string>
    <string name="register_verification_code_tip">请输入您的验证码</string>
    <!-- 注册登录 -->
    <string name="register_or_login">登录/注册</string>
    <string name="logout">退出登录</string>
    <string name="login_username">用户手机号码</string>
    <string name="login_password">密&#160;&#160;码</string>
    <string name="login_login">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="login_click_me_to_register">点我注册</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="new_register_password_old">请输入旧密码</string>
    <string name="new_register_mobilephone_tip">请输入您的手机号码</string>
    <string name="new_register_verification_code_tip">请输入您的邮箱（用于找回密码）</string>
    <string name="new_register_password_hint">请输入8~16位数密码</string>
    <string name="new_register_signagreement_hint">已阅读并同意</string>
    <string name="new_register_agreement_and_privacy">服务许可与隐私协议</string>
    <string name="new_register_display_password">显示密码</string>
    <!-- 登录的对话框 -->
    <string name="nologin_prompt">您还未登录哦~</string>
    <!-- 修改密码 -->
    <string name="original_password_text">请输入原始密码</string>
    <string name="modified_password_text">请输入8~16位密码</string>
    <string name="confirm_password_text">请再输入8~16位密码</string>
    <string name="show_password_checkbox_text">显示密码</string>
    <string name="remember_password_checkbox_text">记住密码</string>
    <string name="submit_text">提交</string>
    <string name="common_comment_hint">说说你的看法</string>
    <string name="common_comment_text">评论</string>
    <!-- 对话框 -->
    <string name="title">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="to_message">去留言</string>
    <!-- 一下是下拉刷新控件  PullToRefreshLayout 用到的资源 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

</resources>