<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/user_login_background"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_username_edittext"
            style="@style/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_username"
            android:hint="@string/login_username"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/login_edittext_border_color" />

        <EditText
            android:id="@+id/login_password_edittext"
            style="@style/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_pwd"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/remember_password_checkBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:button="@drawable/common_checkbox_multiple_bg"
        android:checked="true"
        android:text="@string/remember_password_checkbox_text"
        android:textColor="@color/common_minor_title_text_color"
        android:textSize="@dimen/common_menu_item_font_size" />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@+id/login_input_layout"
        android:layout_marginLeft="@dimen/common_page_edge_distance_24"
        android:layout_marginRight="@dimen/common_page_edge_distance_24"
        android:layout_marginTop="10dp"
        android:background="@drawable/usercenter_register_button_gray_bg"
        android:text="@string/login_login"
        android:textColor="@color/red"
        android:textSize="@dimen/common_menu_item_font_size" />

    <LinearLayout
        android:id="@+id/ll_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_submit"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_click_me_to_register"
            android:textColor="@color/register_forget_text_hint_color"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/register_forget_text_hint_color" />

        <TextView
            android:id="@+id/login_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textColor="@color/register_forget_text_hint_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>